renamed tags, added changelog
all tags now start with TAG_ instaed of the author's name

added a changelog txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,3 +4,4 @@
 * Deleting units is no longer possible.
 * Plot tooltip delay reduced (appears much faster).
 * Status tooltip no longer has a black box and is much smaller and compact, preventing message spam from blocking your view.
+* Civic, Tech, Inspiration, Eureka, and Natural Wonder popups are disabled.
